@@ -1,4 +1,5 @@
 phonfieldwork 0.0.7 (03.07.2020)
+  - add Raven style annotations
   - replace freqmax with frequency_range argument
   - replace example_textgrid with systemfile() call
   - add window annotation to spectrograms
